[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcikit"
version = "0.1.0"
description = "CI-grade evidence and safety tools for AI agents, MCP servers, and open-source contribution workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yufeng He" }]
keywords = ["ai-agent", "mcp", "ci", "testing", "pull-requests", "developer-tools", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "mcp>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8", "build>=1.2", "twine>=5.0"]

[project.scripts]
agentci = "agentci.cli:main"

[project.urls]
Homepage = "https://github.com/he-yufeng/agentcikit"
Issues = "https://github.com/he-yufeng/agentcikit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
